2008-03-21  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstregistrybinary.c: (gst_registry_binary_initialize_magic),
	(gst_registry_binary_check_magic),
	(gst_registry_binary_read_cache):
	* gst/gstregistrybinary.h:
	Don't use GST_MAJORMINOR for the binary registry version. Instead
	hardcode a value that must be changed whenever the format changes
	in an incompatible way.
	Also don't GST_ERROR when there is a version mismatch, just
	regenerate the registry silently.

2008-03-21  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development - 0.10.18.1

=== release 0.10.18 ===

2008-03-20  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.18, "So far away"

2008-03-18  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* win32/common/config.h:
	0.10.17.4 pre-release

2008-03-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Ole André Vadla Ravnås
	    <ole dot andre dot ravnas at tandberg dot com>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstpoll.c: (gst_poll_winsock_error_to_errno),
	(gst_poll_update_winsock_event_mask),
	(gst_poll_prepare_winsock_active_sets),
	(gst_poll_collect_winsock_events), (gst_poll_new), (gst_poll_free),
	(gst_poll_add_fd_unlocked), (gst_poll_fd_ctl_write),
	(gst_poll_fd_ctl_read_unlocked), (gst_poll_fd_ignored),
	(gst_poll_fd_has_error), (gst_poll_fd_can_read_unlocked),
	(gst_poll_check_ctrl_commands), (gst_poll_wait):
	* gst/gstpoll.h:
	* win32/common/libgstreamer.def:
	Add new function gst_poll_fd_ignored() for improved Windows
	compatibility.
	Various minor fixes and cleanups. See #520808.

2008-03-17  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstindex.c: (gst_index_entry_free):
	* gst/gstindex.h:
	  Don't free key strings which we don't own. Fixes crash in
	  gst_index_entry_free() (#522741).

	* tests/check/Makefile.am:
	* tests/check/gst/.cvsignore:
	* tests/check/gst/gstindex.c: (test_index_entries),
	  (gst_index_suite), (gst_index):