@@ -1745,6 +1745,7 @@ GST_TYPE_REGISTRY
 <SUBSECTION Private>
 GST_MAGIC_BINARY_REGISTRY_LEN
 GST_MAGIC_BINARY_REGISTRY_STR
+GST_MAGIC_BINARY_VERSION_STR
 GST_MAGIC_BINARY_VERSION_LEN
 gst_registry_get_type
 </SECTION>
